# agent-knowledge-repository

./: .gitignore  README.md  pyproject.toml
.kiro/hooks/: akr-prompt-reminder.kiro.hook
.kiro/specs/agent-knowledge-repository/: .config.kiro  design.md  requirements.md  tasks-v2.md  tasks.md
.kiro/steering/: agent-knowledge.md
akr/: __init__.py  cli.py  config.py  embedding.py  errors.py  formatters.py  locking.py  repository.py  schema.py  serialization.py  service.py  utils.py
tests/: strategies.py  test_audit.py  test_cli.py  test_config.py  test_config_properties.py  test_embedding.py  test_export_import.py  test_formatters.py  test_locking.py  test_property_schema.py  test_property_serialization.py  test_repository.py  test_service.py  test_service_properties.py  test_stats.py  test_steering.py  test_utils.py
